<resources>
    <bool name="abc_config_actionMenuItemAllCaps">false</bool>
    <string name="app_name">ODK Lookup Updater</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="copy_right">Copyright&#169;2018 Data Department</string>
    <string name="title_activity_help">Help</string>

    <string name="saveSettingsBtn_txt">Save Settings</string>
    <string name="updaterBtn_txt">Update lookup files</string>
    <string name="project_label">Project : </string>
    <string name="project_value">Not set</string>
    <string name="search_label">Search term</string>
    <string name="server_hint">Server address http://x.x.x.x</string>
    <string name="auth_code_hint">Authentication code</string>
    <string name="saveSettings_label">Project code</string>
</resources>
