<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mw.mlw.data.odklookupupdater.MainActivity">

    <TextView
        android:id="@+id/project_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_label"
        android:textSize="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/updater"
        android:layout_alignStart="@+id/updater"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/project_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_value"
        android:textSize="24dp"
        tools:layout_editor_absoluteY="7dp"
        tools:layout_editor_absoluteX="96dp"
        android:layout_alignBaseline="@+id/project_label"
        android:layout_alignBottom="@+id/project_label"
        android:layout_toRightOf="@+id/project_label"
        android:layout_toEndOf="@+id/project_label"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />
    <Button
        android:id="@+id/updater"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/updaterBtn_txt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_marginTop="45dp"
        android:textAllCaps="false"
        android:layout_below="@+id/project_label"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
